--- a/style.css
+++ b/style.css
@@ -1,133 +1,20 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+.cv{
+    border: 10px ridge silver;
+    position: relative;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* Edit yang dibawah */
 
 body{
-    font: 16px/28px arial, sans-serif;
-    background-color: #eaeaea;
-    background-image: url(background.png);
-    color: #333;
-}
-
-.container{
-    width: 800px;
-    margin: auto;
-    background-color: #fff;
+    /* background-color: slategray; */
 }
 
 .header{
-    padding: 20px;
-    padding-bottom: 10px;
-}
-
-.header .judul{
-    font-size: 40px;
-    font-weight: bold;
-}
-
-.header ul li{
-    display: inline-block;
-    margin-top: 20px;
-    margin-right: 5px;
-}
-
-.header a{
-    text-decoration: none;
-    color: salmon;
-}
-
-.header a:hover{
-    background-color: lightskyblue;
-    color: white;
-}
-
-.hero{
-    height: 250px;
-    background-image: url(gambar.png);
-    background-position: 0 0;
-    border-bottom: 5px solid salmon;
-    border-top: 5px solid lightskyblue;
-}
-
-.content{
-    padding: 20px;
-}
-
-.content h1{
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.content .penulis{
-    font-size: 11px;
-    margin-top: -5px;
-}
-
-.content .penulis a{
-    color: salmon;
-    text-decoration: none;
-}
-
-.content p{
-    margin-bottom: 20px;
-    font-size: 14px;
-    text-align: justify;
-}
-
-.footer{
-    background-color: #333;
-    padding: 10px;
-}
-
-.footer .copy{
-    color: #eaeaea;
     text-align: center;
-    font-size: 12px;
+    color: black;
+    background-color: silver;
+    font-size: 30px;
+    border: 10px ridge black;
+}
+
+footer{
+    
 }
