CV Media Buat HP

--- a/style.css
+++ b/style.css
@@ -16,5 +16,16 @@ body{
 }
 
 footer{
-    
+
 }
+
+@media only screen and (max-width: 600px) {
+    /* body {
+      background-color: lightblue;
+    } */
+
+    div.cv img{
+        width: 100%;
+        height: 100%;
+    }
+  }
