--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ footer{
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     /* body {
       background-color: lightblue;
     } */
@@ -27,5 +27,9 @@ footer{
     div.cv img{
         width: 100%;
         height: 100%;
+    }
+
+    .header{
+        font-size: 15px;
     }
   }
