--- a/style.css
+++ b/style.css
@@ -1,35 +1,99 @@
-.cv{
-    border: 10px ridge silver;
-    position: relative;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-body{
-    /* background-color: slategray; */
+div.cv {
+    width: 800px;
+    height: 100%;
+    margin: auto;
 }
 
-.header{
-    text-align: center;
-    color: black;
-    background-color: silver;
-    font-size: 30px;
-    border: 10px ridge black;
+div.aboutme{
+    border-top: grey 5px solid;
+    margin-bottom: 10px;
 }
 
-footer{
-
+div.education{
+    border-top: grey 5px solid;
+    margin-bottom: 10px;
 }
 
-@media only screen and (max-width: 700px) {
-    /* body {
-      background-color: lightblue;
-    } */
+div.worke{
+    border-top: grey 5px solid;
+    margin-bottom: 10px;
+}
 
-    div.cv img{
-        width: 100%;
-        height: 100%;
-    }
+div.orga{
+    border-top: grey 5px solid;
+    margin-bottom: 10px;
+}
 
-    .header{
-        font-size: 15px;
-    }
-  }
+div.abi{
+    border-top: grey 5px solid;
+    margin-bottom: 10px;
+}
+
+div.project{
+    border-top: grey 5px solid;
+    margin-bottom: 10px;
+}
+
+ul {
+    list-style-type: square ;
+    padding-left: 15px;
+}
+
+.judul1{
+    font-weight: bold;
+}
+
+
+
+
+
+
